src/test/resources/fail/cyclicgraph/E.scala
//acyclic
package fail.cyclicgraph

class E {
  val a: A = null
  val d = new D
}
